# catbus

./: .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  HANDOFF.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  ONBOARDING.md  README.md  README.zh-CN.md  README_zh.md  SOUL.md  TOOLS.md  USER.md  catbus.py  fizz-moment-task.md  fizzread-semrush-report-2026-02-12.md  install.sh  pyproject.toml
.claude/: CLAUDE.md  DECISIONS.md  ENV-GUIDE.md  PROGRESS.md  TASK.md
.clawhub/: lock.json
archive/: catbus-design-v3.md  fizzread-backlink-strategy-2026-02-13.md  fizzread-gap-analysis-2026-02-12.md  fizzread-keyword-strategy-2026-02-12.md  fizzread-multi-env-guide.md  fizzread-seo-task.md
catbus/: __init__.py  arena_sync.py  capability_db.py  cli.py  cli.py.bak.v030  config.py  daemon.py  detector.py  executor.py  gateway.py  scanner.py  service.py
catbus.bak.v020/: __main__.py  daemon.py  executor.py  gateway.py  scanner.py
code/: README.md  SKILL.md
docs/: all-competitor-keywords.md  book-seeds-uuid-import-plan.md  catbus-client-guide.md  catbus-server-deploy.md  catbus-skill-taxonomy.md  catbus-skill-trigger-words.md  catbusin-vs-catbus.md  celebrity-booklist-workflow.md  clawhub-skill-rewrite.md  competitor-keywords.md  fizzread-seo-architecture.md  fizzread-seo-diagnosis.md  fizzread-seo-overview.md  fizzread-seo-report-2026-02-27.md  keyword-strategy.md  nefi-status-2026-03-01.md  password-vault-skill-design-v2.1.md  password-vault-skill-design-v2.2.md  password-vault-skill-design-v2.3.md  password-vault-skill-design-v2.4.md  password-vault-skill-design-v2.6.md  (+8 more)
(+277 files in other folders)
