[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catbus"
version = "0.2.2"
description = "The Uber for AI Agents — send and receive tasks across the CatBus network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CatBus Network" }]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
catbus = "catbus.__main__:main"

[project.optional-dependencies]
server = ["websockets>=12.0"]
