[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catbus"
version = "0.3.0"
description = "The Uber for AI Agents — send and receive tasks across the CatBus network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CatBus Network" }]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
catbus = "catbus.__main__:main"

[project.optional-dependencies]
server = ["websockets>=12.0"]

[tool.hatch.build.targets.sdist]
only-include = ["catbus/"]
exclude = ["*.bak*", "*.local"]

[tool.hatch.build.targets.wheel]
packages = ["catbus"]
